--- a/mnist_playground.ipynb
+++ b/mnist_playground.ipynb
@@ -3,29 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from ffnn import FFNN\n",
     "\n",
-    "import plotly.offline as plotly\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from sklearn.manifold import TSNE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotly.init_notebook_mode(connected=True)"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -38,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load in data as numpy arrays\n",
@@ -64,56 +47,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tsne = TSNE()\n",
-    "visualization = tsne.fit_transform(train_in[:5000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plotly.iplot([\n",
-    "    go.Scatter(\n",
-    "        x=visualization[:, 0],\n",
-    "        y=visualization[:, 1],\n",
-    "        mode='markers',\n",
-    "        marker=dict(\n",
-    "            size=3,\n",
-    "            # color = train_labels[:5000].argmax(axis=1),\n",
-    "            # colorscale='Rainbow'\n",
-    "        )\n",
-    "    )\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Define Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define the neural network structure\n",
@@ -124,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train the model using gradient descent\n",
@@ -138,7 +76,7 @@
     "    train_labels,\n",
     "    epochs=1100,\n",
     "    batch_size=100,\n",
-    "    lc_interval=300,\n",
+    "    lc_interval=100,\n",
     "    loss_func=cross_entropy_with_softmax\n",
     ")"
    ]
@@ -146,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Lets check our error rate on our train set\n",
@@ -161,9 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# And check that the predictions match the image\n",
@@ -182,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_outputs = network.evaluate(test_in)\n",
@@ -196,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = 5\n",
@@ -223,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
